# Frappe-Document-Management

./: .gitattributes  README.md  pyproject.toml
document_management/: __init__.py  hooks.py  modules.txt  patches.txt
document_management/document_management/rag/: __init__.py  chunking.py  evaluation.py  index.py  providers.py  service.py  test_chunking.py  test_config.py  test_document_chat.py  test_evaluation.py  test_providers.py
document_management/document_management/utils/: ocr_worker.py  test_ocr_worker.py
document_management/frappe_document_management/rag/: config.py  evaluation.py  evaluation_cases.json  index.py  providers.py  service.py  test_chunking.py  test_config.py  test_document_chat.py  test_evaluation.py  test_providers.py
document_management/frappe_document_management/utils/: archive_lifecycle.py  archive_portability.py  archive_sanity.py  auth.py  auto_tagger.py  document_access.py  document_sharing.py  file_crypto.py  folder_ingestion.py  ml_tagger.py  ocr_worker.py  realtime.py  storage_paths.py  test_archive_portability.py  test_archive_sanity.py  test_auth.py  test_console_search.py  test_document_sharing.py  test_document_upload.py  test_folder_ingestion.py  test_ocr_worker.py
document_management/patches/v1_0/: enforce_unique_document_file_checksum.py  initialize_archive_lifecycle_settings.py  rebuild_indexed_doctype_comments.py  (+2 more)
document_management/search/: advanced.py  indexer.py  query.py  semantic_backend.py  tantivy_backend.py  test_indexer.py
document_management/www/: document_share.html  document_share.py
(+89 files in other folders)
